service-mesh-objects.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todo-app-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-app-vs
spec:
  hosts:
  - "*"
  gateways:
  - todo-app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: webapp
        port:
          number: 4200
