three-tier-vm-container-app-stack.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  namespace: demo-project  
spec:
  selector:
    kubevirt.io/domain: rhel9-mysqldb-vm    
  ports:
  - port: 3306
    targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: todoapi
  namespace: demo-project    
spec:
  selector:
    app: todoapi
  ports:
  - port: 4100
    targetPort: 4100
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: demo-project    
spec:
  selector:
    app: webapp
  ports:
  - port: 4200
    targetPort: 4200   
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapi
  namespace: demo-project    
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"kubevirt.io/v1","kind":"VirtualMachine","name":"rhel9-mysqldb-vm"}]'  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapi
  template:
    metadata:
      labels:
        app: todoapi
    spec:
      containers:
      - name: todoapi
        image: quay.io/rebontadeb/training/go-todo-crud-api-x86-64:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 4100
        volumeMounts:
          - mountPath: /app/config/todo-api.properties
            name: todo-api-config
            subPath: todo-api.properties
      volumes:
        - name: todo-api-config
          configMap:
            name: todo-app-configmap
            items:
            - key: todo-api.properties
              path: todo-api.properties
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: demo-project    
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"todoapi"}]'  
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: quay.io/rebontadeb/training/flask-app-x86-64:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 4200
        volumeMounts:
          - mountPath: /config/web-app-config.properties
            name: webapp-config
            subPath: web-app-config.properties
      volumes:
        - name: webapp-config
          configMap:
            name: todo-app-configmap
            items:
            - key: web-app-config.properties
              path: web-app-config.properties
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: todo-webapp
  namespace: demo-project
spec:
  to:
    kind: Service
    name: webapp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 4200
